Prevent bug on small phones
Button would be too large otherwise

--- a/public/styles/components/_button.sass
+++ b/public/styles/components/_button.sass
@@ -17,7 +17,7 @@ input[type="button"]
     padding: 0
 
     +mobile
-        font-size: 1.4rem
+        font-size: 1.1rem
         padding: 0 10px
 
 .button:hover,
